Added help pages

--- a/Help/1 Introduction.html
+++ b/Help/1 Introduction.html
@@ -14,12 +14,10 @@
 <body>
 <h1>What is Giraph</h1>
 <p>
-Giraph is a program for visualising the results of gene ontology and other 
-functional analyses. There is often a lot of redundancy in the results of 
-functional analysis of gene sets.
-</p>
-<p>
-Giraph provides a graphical way to explore and present results.
+Giraph provides a graphical way to explore and present results of gene ontology and other 
+functional analyses.
+There is often a lot of redundancy in the results of functional analysis of gene sets, so Giraph groups similar functional categories together. 
+
 Each circle represents a functional category. 
 The size of the circle is related to the number of genes from the query list are in the category.
 The proximity of the circles is related to how many genes overlap between the sets.
@@ -32,8 +30,21 @@ The size of the circle is related to the number of genes from the query list are
 The proximity of the circles is related to how many genes overlap between the sets.
 </p>
 
-<h2>What data can be displayed in Giraph?</h2>
+<h2>What input data is required</h2>
 <p>
+A list of gene names can be entered. 
+
+OR
+
 Giraph can accept the output of functional analyses from other programs.  
 
 </p>
+
+<h2>Functional analysis of gene sets within Giraph</h2>
+<p>
+
+
+Placing the cursor over a circle will display the name of the category
+
+
+
