--- a/Help/3 Menu Options/Adjusting the display.html
+++ b/Help/3 Menu Options/Adjusting the display.html
@@ -14,6 +14,7 @@
 <body>
 <h1>Adjusting the display</h1>
 <br />
+The circles can be dragged around using the mouse to make the display clearer if necessary. 
 A number of options can be selected to change some aspects of the display.
 <br />
 <br />
@@ -29,8 +30,11 @@ In the default option - the colours are not directly determined by the positions
 of the circles on the screen, but by the proportion of overlapping genes between gene lists. The clustering is 
 calculated independently from the positions of the circles.
 <br />
+<br />
 The alternative option uses colours determined by the proximity of the 
-circles to each other on the screen. 
+circles to each other on the screen.
+<br/>
+These options can be toggled between by selecting the 3 coloured circles button on the tool bar 
 </p>
 
 <h2>Changing the number of colours</h2>
@@ -52,6 +56,7 @@ A selected category can be deleted from the display by selecting the 'delete cir
 This is only deleted from the current view. If the p-value is adjusted, the display is reset.
 </p> 
 <br />
+<br />
 <h1>Adjusting lines</h1>
 <img src="fewer_lines.png" alt="fewer lines">
 <img src="more_lines.png">
@@ -60,14 +65,15 @@ This is only deleted from the current view. If the p-value is adjusted, the disp
 <p>
 The darker the lines, the greater the proportion of genes that overlap between 2 functional categories. <br />
 The number of lines shown can be increased, decreased or all the lines can be removed from the display.  
-<br />
 </p> 
-
+<br />
+<br />
 <h1>Displaying the category names</h1>
 <img src="functional_annotations.png" alt="category name Icon">
 <p>
 Placing the cursor over a circle will highlight it and the category name will be displayed.  
-Clicking on the circle has a similar effect.
+Clicking on the circle has a similar effect. 
+Clicking on an area of empty space within the display will stop the category name from being displayed.
 <br />
 All of the category names can be displayed by selecting the menu option, and removed by selecting it again. 
 </p>
