Some tweaks in GeneInfoPanel

--- a/Help/3 Menu Options/Adjusting the display.html
+++ b/Help/3 Menu Options/Adjusting the display.html
@@ -26,13 +26,13 @@ The colours are there for aesthetic reasons.
 <p>
 There are 2 options for how the colours are determined in Giraph. <br />
 <br />
-In the default option - the colours are not directly determined by the positions 
-of the circles on the screen, but by the proportion of overlapping genes between gene lists. The clustering is 
-calculated independently from the positions of the circles.
-<br />
-<br />
-The alternative option uses colours determined by the proximity of the 
+In the default option the colours are determined by the proximity of the 
 circles to each other on the screen.
+<br />
+<br />
+In the alternative option the colours are not directly determined by the positions 
+of the circles on the screen, but by the proportion of overlapping genes between gene lists. 
+The clustering is calculated independently from the positions of the circles.
 <br/>
 These options can be toggled between by selecting the 3 coloured circles button on the tool bar 
 </p>
