minor help updates

--- a/Help/1 Introduction.html
+++ b/Help/1 Introduction.html
@@ -18,9 +18,6 @@ Giraph provides a graphical way to explore and present results of gene ontology 
 functional analyses.
 There is often a lot of redundancy in the results of functional analysis of gene sets, so Giraph groups similar functional categories together. 
 
-Each circle represents a functional category. 
-The size of the circle is related to the number of genes from the query list are in the category.
-The proximity of the circles is related to how many genes overlap between the sets.
 </p>
 
 <h2>How does Giraph represent the gene sets?</h2>
@@ -32,19 +29,12 @@ The proximity of the circles is related to how many genes overlap between the se
 
 <h2>What input data is required</h2>
 <p>
-A list of gene names can be entered. 
+A list of gene names can be entered.<br> 
 
-OR
+OR<br>
 
 Giraph can accept the output of functional analyses from other programs.  
 
 </p>
-
-<h2>Functional analysis of gene sets within Giraph</h2>
-<p>
-
-
-Placing the cursor over a circle will display the name of the category
-
 
 
