Updated help files

--- a/Help/1. Introduction/1. Introduction.html
+++ b/Help/1. Introduction/1. Introduction.html
@@ -16,20 +16,20 @@
 <p>
 Giraph provides a graphical way to explore and present results of gene ontology and other 
 functional analyses.
-There is often a lot of redundancy in the results of functional analysis of gene sets, so Giraph groups similar functional categories together. 
-
+There is often a lot of redundancy in the results of functional analysis of gene sets, so Giraph groups similar functional categories together.<br> 
+<img src="giraph_eg.png" alt="Giraph example">
 </p>
 
 <h2>How does Giraph represent the gene sets?</h2>
 <p>
 Each circle represents a functional category. 
-The size of the circle is related to the number of genes from the query list are in the category.
-The proximity of the circles is related to how many genes overlap between the sets.
+The size of the circle is related to the number of genes from the query list that are in the category.
+The proximity of the circles is related to the proportion of genes that overlap between the sets.
 </p>
 
 <h2>What input data is required</h2>
 <p>
-A list of gene names can be entered.<br> 
+A list of human or mouse gene names can be entered.<br> 
 
 OR<br>
 
