Hopefully fixed bug
If there were loads of closely related lists it all went wrong.

--- a/Help/1. Introduction/1. Introduction.html
+++ b/Help/1. Introduction/1. Introduction.html
@@ -15,16 +15,17 @@
 <h1>What is Giraph</h1>
 <p>
 Giraph provides a graphical way to explore and present results of gene ontology and other 
-functional analyses.
+functional analyses.<br>
 There is often a lot of redundancy in the results of functional analysis of gene sets, so Giraph groups similar functional categories together.<br> 
 <img src="giraph_eg.png" alt="Giraph example">
 </p>
-
+<br>
 <h2>How does Giraph represent the gene sets?</h2>
 <p>
 Each circle represents a functional category. 
 The size of the circle is related to the number of genes from the query list that are in the category.
 The proximity of the circles is related to the proportion of genes that overlap between the sets.
+<br>
 </p>
 
 <h2>What input data is required</h2>
