Changing some code so that gmt files can be downloaded.

--- a/Help/3. Menu Options/3.1 Adjusting the display.html
+++ b/Help/3. Menu Options/3.1 Adjusting the display.html
@@ -77,6 +77,17 @@ Clicking on an area of empty space within the display will stop the category nam
 <br />
 All of the category names can be displayed by selecting the menu option, and removed by selecting it again. 
 </p>
-
+<h1>Changing the p-value threshold</h1>
+<img src="functional_annotations.png" alt="category name Icon">
+<p>
+To filter the results by significance, select the p-value icon and enter the required p-value threshold.
+All the results from the analysis or external file are kept, so the p-value threshold can be increased or decreased. 
+</p>
+<h1>Displaying information about the gene sets</h1>
+<img src="functional_annotations.png" alt="category name Icon">
+<p>
+The info button brings up another panel. When a circle is selected, information about it is populated in the information panel.
+The first, coloured line is the name of the 
+</p>
 </body>
 </html>
